# BNL1tonAnalysis

./: CMakeLists.txt
include/: AppConfig.h  DataProcessor.h  DataProcessor1ton.h  Waveform.h
scripts/: dailycheck.sh  dailycheck_30t.sh  process.sh  process_1ton.sh  process_crossing_muon.sh
src/: 1ton_analysis.py  AppConfig.cpp  ConvertMCtoDataFormat.cpp  DailyCheck.cpp  DailyCheck30T.cpp  DataProcessor.cpp  DataProcessor1ton.cpp  DrawPEDistribution.cpp  MakeCrossingMuonRootFile.cpp  MakeResultRootFile.cpp  Process1tonData.cpp  ProcessCrosingMuon.py  ProcessMCFile.cpp  ProcessRawRoot.cpp  SelectCrossingMuon.cpp  Waveform.cpp  daily_check.py  injection_monitor.py  main.cpp  profiling_results
